немного изменил структуру, дата выводится через js, сделал блок с монетами и валютой, осталось заполнить их

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,6 +5,9 @@ block header
     include ../blocks/header/header.pug
     include ../blocks/slider/slider.pug 
     include ../blocks/servicesSlider/servicesSlider.pug 
+    .flex-container
+        .main-container
+            include ../blocks/finance/finance.pug 
 block content
 block footer
 
