--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -39,3 +39,28 @@ body {
     font-family: G-regular;
 }
 a{text-decoration: none}
+
+.flex-container{
+    display: flex;
+    justify-content: center;
+}
+.main-container{
+     width: 1170px;
+}
+@media screen and (max-width: 1919px){
+    .main-container{
+        width: 890px;
+    }
+}
+@media screen and (max-width: 1023px){
+    .main-container{
+        width: 588px;
+    }
+}
+@media screen and (max-width: 767px){
+    .main-container{
+        width: 280px;
+    }
+}
+
+
