--- a/blocks/info-block/info-block.scss
+++ b/blocks/info-block/info-block.scss
@@ -1,8 +1,12 @@
 .info-block {
-    width: 100%;
+    width: 570px;
     height: 360px;
+    margin-left: 30px;
+    position: relative;
 }
-
+.info-block:first-child {
+    margin-left: 0;
+}
 .info-block_slide1 {
     background: #ACACCD;
 }
@@ -56,13 +60,17 @@
 .info-block__footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: -webkit-calc(100% - 2px);
+    width: -moz-calc(100% - 2px);
+    width: -o-calc(100% - 2px);
+    width: calc(100% - 2px);
     height: 70px;
     background: rgba(243, 244, 246, 1);
     display: flex;
     align-items: center;
     z-index: 3;
     justify-content: space-between;
+    border: 1px solid $gray-darken-2;
 
     a,
     a:active,
@@ -78,10 +86,18 @@
         margin-right: 24px;
     }
 }
+.info-block_rate, .info-block_coins{
+    border: 1px solid $gray-darken-2;
+    .info-block__footer {
+        width: 100%;
+        border: none;
+        border-top: 1px solid $gray-darken-1;
+    }
+}
 //102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024
 @media screen and (max-width: 1919px) {
     .info-block {
-            width: 100%;
+            width: 430px;
             height: 360px;
         }
     .info-block__content {
@@ -98,14 +114,21 @@
 //768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768
 @media screen and (max-width: 1023px) {
     .info-block {
-                width: 588px;
+                width: 100%;
                 height: 430px;
+                margin-left: 0;
             }
     .info-block__content {
         width: 50%;
     }
+    .info-block_rate{
+        display: block;
+    }
+    .info-block_coins{
+        display: none;
+    }
 }
-//320320320320320320320320320320320320320320320320320320320320320320320320320320320
+//320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320
 @media screen and (max-width: 767px) {
     .info-block {
                 width: 280px;
