--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,5 @@
 @import "../blocks/header/header";
 @import "../blocks/slider/slider";
 @import "../blocks/servicesSlider/servicesSlider"; 
-@import "../blocks/info-block/info-block"; 
+@import "../blocks/info-block/info-block";
+@import "../blocks/finance/finance";
