закончил на 28 декабря

--- a/blocks/finance/finance.pug
+++ b/blocks/finance/finance.pug
@@ -12,11 +12,11 @@
                     p тут будет таблица
             .info-block__footer
                 a(href="#!") Курсы валют в отделениях Банка
-                span.icon-go
+                span
         .info-block.info-block_coins
             .info-block__container
                 .info-block__content
                     p тут будет таблица
             .info-block__footer
                 a(href="#!") Каталог монет
-                span.icon-go
+                span
