--- a/blocks/servicesSlider/servicesSlider.pug
+++ b/blocks/servicesSlider/servicesSlider.pug
@@ -11,7 +11,7 @@
                 img(src="media/servicesSlider1.png").info-block__image
                 .info-block__footer
                     a(href="#!") Подать заявку
-                    span.icon-go
+                    span
             .info-block.info-block_slide2
                 .info-block__container
                     .info-block__content
@@ -22,5 +22,5 @@
                         img(src="media/servicesSlider2.png")
                 .info-block__footer
                     a(href="#!") Подать заявку
-                    span.icon-go
+                    span
 .customDots
