--- a/blocks/info-block/info-block.scss
+++ b/blocks/info-block/info-block.scss
@@ -4,9 +4,11 @@
     margin-left: 30px;
     position: relative;
 }
+
 .info-block:first-child {
     margin-left: 0;
 }
+
 .info-block_slide1 {
     background: #ACACCD;
 }
@@ -75,6 +77,8 @@
     a,
     a:active,
     a:visited {
+        font-family: G-medium;
+        font-size: 18px;
         color: $gray-darken-5;
         text-decoration: none;
         display: block;
@@ -85,23 +89,37 @@
     span {
         margin-right: 24px;
     }
+
+    span::after {
+        font-family: "iconsRR";
+        font-size: 18px;
+        content: "\e92d";
+        color: $gray-darken-5;
+    }
 }
-.info-block_rate, .info-block_coins{
+
+.info-block_rate,
+.info-block_coins {
     border: 1px solid $gray-darken-2;
+
     .info-block__footer {
         width: 100%;
         border: none;
         border-top: 1px solid $gray-darken-1;
     }
 }
+
 //102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024
 @media screen and (max-width: 1919px) {
     .info-block {
-            width: 430px;
-            height: 360px;
-        }
+        width: 430px;
+        height: 360px;
+    }
+
     .info-block__content {
-        width: 65%;}
+        width: 65%;
+    }
+
     .info-block__image {
         position: absolute;
         right: -10px;
@@ -111,29 +129,35 @@
         width: 150px !important;
     }
 }
+
 //768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768
 @media screen and (max-width: 1023px) {
     .info-block {
-                width: 100%;
-                height: 430px;
-                margin-left: 0;
-            }
+        width: 100%;
+        height: 430px;
+        margin-left: 0;
+    }
+
     .info-block__content {
         width: 50%;
     }
-    .info-block_rate{
+
+    .info-block_rate {
         display: block;
     }
-    .info-block_coins{
+
+    .info-block_coins {
         display: none;
     }
 }
+
 //320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320
 @media screen and (max-width: 767px) {
     .info-block {
-                width: 280px;
-                height: 430px;
-            }
+        width: 280px;
+        height: 430px;
+    }
+
     .info-block__content {
         width: 100%;
         padding-left: 15px;
@@ -157,5 +181,25 @@
         position: absolute;
         right: 0;
         top: 25%;
+    }
+
+    .info-block__footer {
+        height: 45px;
+        a,
+        a:active,
+        a:visited {
+            font-size: 12px;
+        }
+
+        span {
+            margin-right: 24px;
+        }
+
+        span::after {
+            font-family: "iconsRR";
+            font-size: 12px;
+            content: "\e934";
+            color: $gray-darken-5;
+        }
     }
 }
