--- a/blocks/info-block/info-block.scss
+++ b/blocks/info-block/info-block.scss
@@ -137,7 +137,9 @@
         height: 430px;
         margin-left: 0;
     }
-
+    .info-block_slide2 {
+    background: #759E9C;
+}
     .info-block__content {
         width: 50%;
     }
