--- a/blocks/finance/finance.scss
+++ b/blocks/finance/finance.scss
@@ -55,3 +55,11 @@
         margin-left: 0;
     }
 }
+@media screen and (max-width: 1023px) {
+.finance__coins-toggler::before{
+    font-family: "iconsRR";
+    content: "";
+    margin-right: 10px;
+    color: $orange;
+}
+}
