подправил 1 слайдер снова, не работает pixel perfect

--- a/blocks/slider/slider.pug
+++ b/blocks/slider/slider.pug
@@ -11,7 +11,7 @@
     .item
         .slider__content
             .slider__title Центр для успешных инвестиций 2
-            .slider__text Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.
+            .slider__text Прямой доступ на валютный рынок. Зарабатывайте на колебаниях курсов мировых валют
             .slider__btn
                 .btn Подать заявку
         .slider__image
