pexel perfect до блока монет и валют

--- a/blocks/servicesSlider/servicesSlider.scss
+++ b/blocks/servicesSlider/servicesSlider.scss
@@ -1,5 +1,5 @@
 .servicesSlider {
-    margin-top: 75px;
+    margin-top: 65px;
     display: flex;
     justify-content: center;
 }
@@ -42,7 +42,7 @@
 //102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024
 @media screen and (max-width: 1919px) {
     .servicesSlider {
-        margin-top: 75px;
+        margin-top: 65px;
         display: flex;
         justify-content: center;
     }
@@ -102,6 +102,7 @@
             line-height: 25px;
             margin-bottom: 21px;
             margin-left: 0px;
+            width: 167px
         }
 
         .owl-carousel-2 {
