--- a/blocks/info-block/info-block.scss
+++ b/blocks/info-block/info-block.scss
@@ -1,6 +1,6 @@
 .info-block {
     width: 570px;
-    height: 360px;
+    height: 430px;
     margin-left: 30px;
     position: relative;
 }
@@ -18,8 +18,8 @@
 }
 
 .info-block__content {
-    width: 55%;
-    padding-left: 25px;
+    width: 65%;
+    padding-left: 30px;
     overflow: hidden;
     position: relative;
     z-index: 2;
@@ -36,9 +36,10 @@
 
 .info-block__title {
     font-family: G-bold;
-    font-size: 20px;
-    line-height: 25px;
+    font-size: 25px;
+    line-height: 30px;
     color: #fff;
+    margin-top: 15px;
 }
 
 .info-block__text {
@@ -46,6 +47,7 @@
     font-family: G-regular;
     font-size: 14px;
     line-height: 20px;
+    width: 340px;
     color: #FFFFFF;
 }
 
@@ -55,7 +57,7 @@
     top: 0;
     height: auto;
     margin-left: 15px;
-    width: 150px !important;
+    width: 190px !important;
     z-index: 1;
 }
 
@@ -113,27 +115,35 @@
 @media screen and (max-width: 1919px) {
     .info-block {
         width: 430px;
-        height: 360px;
+        height: 430px;
     }
-
+    .info-block__title {
+        margin-top: 10px;
+        font-size: 20px;
+        line-height: 25px;
+    }
     .info-block__content {
         width: 65%;
+        padding-left: 20px;
     }
 
     .info-block__image {
         position: absolute;
         right: -10px;
-        top: 0;
         height: auto;
         margin-left: 15px;
-        width: 150px !important;
+        width: 175px !important;
+        top: 5%;
+    }
+    .info-block__text {
+        width: 260px;
     }
 }
 
 //768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768
 @media screen and (max-width: 1023px) {
     .info-block {
-        width: 100%;
+        width: 575px;
         height: 430px;
         margin-left: 0;
     }
@@ -151,13 +161,21 @@
     .info-block_coins {
         display: none;
     }
+    .info-block__image {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 350px;
+        margin-left: 15px;
+        width: 180px !important;
+    }
 }
 
 //320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320
 @media screen and (max-width: 767px) {
     .info-block {
         width: 280px;
-        height: 430px;
+        height: 405px;
     }
 
     .info-block__content {
@@ -167,12 +185,14 @@
 
     .info-block__type {
         font-size: 12px;
-        line-height: 80px;
+        line-height: 40px;
+        margin-top: 15px;
     }
 
     .info-block__title {
         font-size: 18px;
         line-height: 25px;
+        margin-top: 0;
     }
 
     .info-block__text {
@@ -180,9 +200,10 @@
     }
 
     .info-block__image {
-        position: absolute;
-        right: 0;
-        top: 25%;
+        right: -10px;
+        top: 22%;
+        width: 150px !important;
+        height: auto;
     }
 
     .info-block__footer {
