--- a/blocks/finance/finance.pug
+++ b/blocks/finance/finance.pug
@@ -7,16 +7,69 @@
             a(href="#!") Монеты
     .finance__info
         .info-block.info-block_rate
-            .info-block__container
-                .info-block__content
-                    p тут будет таблица
+            .info-block__container.info-block__container-table
+                table.info-block__table
+                    tr.info-block__table-headers
+                        td.info-block__table-header.info-block__table-header-val
+                        td.info-block__table-header.info-block__table-header-time
+                        td.info-block__table-header.info-block__table-header-purchase
+                        td.info-block__table-header.info-block__table-header-selling
+                        td.info-block__table-header.info-block__table-header-cb
+                    tr.info-block__table-first-row
+                        td.info-block__table-currency USD
+                        td.info-block__table-time
+                            img(src="media/time2.png")
+                        td.info-block__table-purchase.info-block__table-purchase_down 64,56
+                        td.info-block__table-selling.info-block__table-selling_up 64,12
+                        td.info-block__table-cb.info-block__table-cb_up 64,5645
+                    tr.info-block__table-row
+                        td.info-block__table-currency EUR
+                        td.info-block__table-time
+                            img(src="media/time1.png")
+                        td.info-block__table-purchase.info-block__table-purchase_down 72,20
+                        td.info-block__table-selling.info-block__table-selling_down 72,69
+                        td.info-block__table-cb.info-block__table-cb_down 72,3422
+                    tr.info-block__table-row
+                        td.info-block__table-currency GBP
+                        td.info-block__table-time
+                            img(src="media/time2.png")
+                        td.info-block__table-purchase.info-block__table-purchase_up 84,40
+                        td.info-block__table-selling.info-block__table-selling_up 85,02
+                        td.info-block__table-cb.info-block__table-cb_up 85,4443
+                    tr.info-block__table-row
+                        td.info-block__table-currency chf
+                        td.info-block__table-time
+                            img(src="media/time1.png")
+                        td.info-block__table-purchase.info-block__table-purchase_down 59,33
+                        td.info-block__table-selling.info-block__table-selling_down 60,56
+                        td.info-block__table-cb.info-block__table-cb_up 59,6664
             .info-block__footer
                 a(href="#!") Курсы валют в отделениях Банка
                 span
         .info-block.info-block_coins
-            .info-block__container
-                .info-block__content
-                    p тут будет таблица
+            .info-block__container.info-block__container-table
+                table.info-block__table
+                    tr.info-block__table-headers
+                        td.info-block__table-header.info-block__table-header-coin
+                        td.info-block__table-header.info-block__table-header-value
+                        td.info-block__table-header.info-block__table-header-purchase
+                        td.info-block__table-header.info-block__table-header-selling
+                    tr.info-block__table-first-row_mt-30px
+                        td(rowspan="2").info-block__table-coin
+                            img(src="media/coin1.png")
+                        td(colspan="3").info-block__table-coin-name Георгий Победоносец (ММД)
+                    tr.info-block__table-row_mt-15px
+                        td.info-block__table-value 50
+                        td.info-block__table-purchase 21 500
+                        td.info-block__table-selling 22 456
+                    tr.info-block__table-row
+                        td(rowspan="2").info-block__table-coin
+                            img(src="media/coin2.png")
+                        td(colspan="3").info-block__table-coin-name Георгий Победоносец (серебро)
+                    tr.info-block__table-row_mt-15px
+                        td.info-block__table-value 100
+                        td.info-block__table-purchase 23 565
+                        td.info-block__table-selling 23 890
             .info-block__footer
                 a(href="#!") Каталог монет
                 span
