--- a/blocks/info-block/info-block.scss
+++ b/blocks/info-block/info-block.scss
@@ -94,7 +94,7 @@
 
     span::after {
         font-family: "iconsRR";
-        font-size: 18px;
+        font-size: 12px;
         content: "\e92d";
         color: $gray-darken-5;
     }
@@ -117,11 +117,13 @@
         width: 430px;
         height: 430px;
     }
+
     .info-block__title {
         margin-top: 10px;
         font-size: 20px;
         line-height: 25px;
     }
+
     .info-block__content {
         width: 65%;
         padding-left: 20px;
@@ -135,6 +137,7 @@
         width: 175px !important;
         top: 5%;
     }
+
     .info-block__text {
         width: 260px;
     }
@@ -147,9 +150,11 @@
         height: 430px;
         margin-left: 0;
     }
+
     .info-block_slide2 {
-    background: #759E9C;
-}
+        background: #759E9C;
+    }
+
     .info-block__content {
         width: 50%;
     }
@@ -161,6 +166,7 @@
     .info-block_coins {
         display: none;
     }
+
     .info-block__image {
         position: absolute;
         right: 0;
@@ -208,6 +214,7 @@
 
     .info-block__footer {
         height: 45px;
+
         a,
         a:active,
         a:visited {
@@ -225,7 +232,17 @@
             color: $gray-darken-5;
         }
     }
-    .info-block_rate{
+
+    .info-block_rate {
         height: 230px;
+    }
+
+    .info-block_coins {
+
+        .info-block__table-value,
+        .info-block__table-purchase,
+        .info-block__table-selling {
+            font-size: 10px
+        }
     }
 }
