--- a/pug/template.pug
+++ b/pug/template.pug
@@ -10,8 +10,6 @@ html
     block header
     block content
     block footer
-    script(src="blocks/header/header__toggler/header__toggler.js")
     script(src="js/jquery-3.3.1.js")
     script(src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js")
-    script(src="blocks/slider/setupSlider.js")
-    script(src="blocks/finance/finance__date/finance__date.js")
+    script(src="js/bundle.js")
