сетка готова под все, кроме мобилок

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,4 @@
 @import "../blocks/servicesSlider/servicesSlider"; 
 @import "../blocks/info-block/info-block";
 @import "../blocks/finance/finance";
+@import "../blocks/grid/grid";
