--- a/blocks/grid/grid.scss
+++ b/blocks/grid/grid.scss
@@ -1,13 +1,12 @@
 .grid {
-    margin-top: 80px;
     display: grid;
     grid-template-areas:
-        "transfer transfer transfer"
         "money-market money-market money-protection"
         "remote-card card-mastercard card-mastercard"
 }
 
-.grid__transfer {
+.transfer {
+    margin-top: 80px;
     grid-area: transfer;
     height: 275px;
     width: 100%;
@@ -45,51 +44,100 @@
 
 @media screen and (max-width: 1919px) {
     .grid {
-        margin-top: 70px;
         display: grid;
         grid-template-areas:
-            "transfer transfer"
             "money-market money-market"
             "money-protection remote-card"
             "card-mastercard card-mastercard"
     }
 
-    .grid__transfer {
+    .transfer {
+        margin-top: 70px;
         margin-bottom: 80px;
     }
+
     .grid__money-market {
         margin-right: 0;
     }
-    .grid__money-protection{
+
+    .grid__money-protection {
         margin-right: 30px;
     }
-    .grid__remote-card{
+
+    .grid__remote-card {
         margin-right: 0;
     }
 }
+
 @media screen and (max-width: 1023px) {
     .grid {
-        margin-top: 50px;
         display: grid;
         grid-template-areas:
-            "transfer transfer"
             "money-market money-protection"
             "remote-card card-mastercard"
     }
 
-    .grid__transfer {
+    .transfer {
+        margin-top: 50px;
         margin-bottom: 50px;
     }
+
     .grid__money-market {
         margin-right: 30px;
     }
-    .grid__money-protection{
+
+    .grid__money-protection {
         margin-right: 0;
     }
-    .grid__remote-card{
+
+    .grid__remote-card {
         margin-right: 30px;
     }
-    .grid__card-mastercard{
+
+    .grid__card-mastercard {
         margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .transfer {
+        width: 100%;
+        height: 380px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .grid__money-market {
+        margin: 0;
+        height: 350px;
+        width: 250px;
+    }
+
+    .grid__money-protection {
+        margin: 0;
+        height: 350px;
+        width: 250px;
+    }
+
+    .grid__remote-card {
+        margin: 0;
+        height: 350px;
+        width: 250px;
+    }
+
+    .grid__card-mastercard {
+        margin: 0;
+        height: 350px;
+        width: 250px;
+    }
+
+    .owl-carousel-3 {
+        .owl-item {
+            width: 250px !important;
+        }
+
+        .active {
+            width: 250px !important;
+        }
     }
 }
