добавил контент в блок про переводы с карты на карту

--- a/blocks/grid/grid.pug
+++ b/blocks/grid/grid.pug
@@ -1,4 +1,10 @@
 .transfer
+    h6 Переводите с карты на карту
+    p Быстрый и удобный способ перевести денежные средства. Узнайте о 
+        span.deep-blue лимитах и комиссиях 
+    a(href="#!").btn Перевести
+    img(src="media/Mockup1920.png" alt="Изображение карт" title="Переводы").transfer__image_1920
+    img(src="media/Mockup.png" alt="Изображение карт" title="Переводы").transfer__image
 .grid
     .grid__money-market
     .grid__money-protection
