--- a/blocks/grid/grid.scss
+++ b/blocks/grid/grid.scss
@@ -37,7 +37,7 @@
 
     .btn {
         width: 250px;
-        margin-top: 20px;
+        margin-top: 25px;
         margin-left: 40px;
     }
 
@@ -156,19 +156,22 @@
     .transfer {
         margin-top: 50px;
         margin-bottom: 50px;
-
+        height: 330px;
         h6 {
-            width: 275px;
-            padding-top: 35px;
+            width: 225px;
+            padding-top: 45px;
             margin-left: 30px;
+            font-size: 20px;
+            line-height: 25px;
         }
 
 
         p {
-            width: 325px;
+            width: 240px;
             font-size: 14px;
             margin-left: 30px;
-            margin-top: 10px;
+            margin-top: 20px;
+            line-height: 20px;
         }
 
         .deep-blue {
@@ -177,12 +180,12 @@
 
         .btn {
             width: 230px;
-            margin-top: 20px;
+            margin-top: 25px;
             margin-left: 30px;
         }
 
         img {
-            width: 350px;
+            width: 400px;
             height: auto;
         }
 
@@ -221,12 +224,15 @@
         height: 380px;
         margin-top: 30px;
         margin-bottom: 30px;
+
         h6 {
-            width: 230px;
+            width: 200px;
             padding-top: 55px;
             margin-left: 15px;
             z-index: 2;
-            position: relative
+            position: relative;
+            font-size: 18px;
+            line-height: 25px;
         }
 
 
@@ -236,7 +242,8 @@
             margin-left: 15px;
             margin-top: 10px;
             z-index: 2;
-            position: relative
+            position: relative;
+            line-height: 20px;
         }
 
         .deep-blue {
@@ -244,8 +251,8 @@
         }
 
         .btn {
-            width: 155px;
-            margin-top: 135px;
+            width: 145px;
+            margin-top: 145px;
             margin-left: 15px;
             font-size: 12px;
             z-index: 2;
@@ -253,7 +260,7 @@
         }
 
         img {
-            width: 260px;
+            width: 280px;
             height: auto;
             z-index: 1;
         }
