закончил блоки сеткой, нужно будет подогнать по PP

--- a/blocks/grid/grid.pug
+++ b/blocks/grid/grid.pug
@@ -1,12 +1,24 @@
 .transfer
-    h6 Переводите с карты на карту
-    p Быстрый и удобный способ перевести денежные средства. Узнайте о 
+    h6.grid__card-title Переводите с карты на карту
+    p.grid__card-text Быстрый и удобный способ перевести денежные средства. Узнайте о 
         span.deep-blue лимитах и комиссиях 
     a(href="#!").btn Перевести
     img(src="media/Mockup1920.png" alt="Изображение карт" title="Переводы").transfer__image_1920
     img(src="media/Mockup.png" alt="Изображение карт" title="Переводы").transfer__image
 .grid
     .grid__money-market
+        h6.grid__card-title Прямой доступ на валютный рынок
+        p.grid__card-text Зарабатывайте на колебаниях курсов мировых валют
+        img(src="media/phone.png" alt="" title="Валютный рынок").grid__image
     .grid__money-protection
+        h6.grid__card-title Защитные признаки банкнот Банка России
+        p.grid__card-text Признаки подлинности, контролируемые с использованием х8-х10 лупы
+        img(src="media/column.png" alt="" title="Защита банкнот(бумажных деняк)").grid__image
     .grid__remote-card
+        h6.grid__card-title До +0,5% годовых при дистанционном оформлении
+        p.grid__card-text Начался прием карт МИР по выдаче наличных в сети банкоматов и дополнительных офисов.
+        img(src="media/girl.png" alt="" title="Какая-то женщина на этой странице").grid__image
     .grid__card-mastercard
+        h6.grid__card-title Бесконтактная карта MasterCard
+        p.grid__card-text Вы можете гораздо быстрее произвести оплату на АЗС, парковке, в кафе или в магазине одним касанием!
+        img(src="media/rock.png" alt="" title="Дуэйн, ты?").grid__image
