блок новостей готов, нужно поправить по PP

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,6 +8,7 @@ block header
     .flex-container
         .main-container
             include ../blocks/finance/finance.pug 
-            include ../blocks/grid/grid.pug 
+            include ../blocks/grid/grid.pug
+            include ../blocks/news/news.pug
 block content
 block footer        
