--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,3 +7,4 @@
 @import "../blocks/info-block/info-block";
 @import "../blocks/finance/finance";
 @import "../blocks/grid/grid";
+@import "../blocks/news/news";
