--- a/pug/index.pug
+++ b/pug/index.pug
@@ -10,5 +10,8 @@ block header
             include ../blocks/finance/finance.pug 
             include ../blocks/grid/grid.pug
             include ../blocks/news/news.pug
+    .flex-container.footer
+        .main-container
+            include ../blocks/footer/footer.pug
 block content
 block footer        
