--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,3 +8,4 @@
 @import "../blocks/finance/finance";
 @import "../blocks/grid/grid";
 @import "../blocks/news/news";
+@import "../blocks/footer/footer";
