мобилка почти готова

--- a/blocks/footer/footer.pug
+++ b/blocks/footer/footer.pug
@@ -1,6 +1,7 @@
 .footer__lists
     ul.footer__list
-        li.footer__list-item-dropdown Раскрытие информации
+        li.footer__list-item-dropdown
+            span.footer__list-item-dropdown-1 О банке
             ul.footer__dropdown-list-1
                 li.footer__list-item 
                     a(href="#!") Реквизиты
@@ -11,7 +12,7 @@
                 li.footer__list-item 
                     a(href="#!") Список лиц, под контролем либо значительным влиянием которых находится Банк
     ul.footer__list
-        li.footer__list-item-dropdown Частым клиентам
+        li.footer__list-item-dropdown.footer__list-item-dropdown-2 Частым клиентам
             ul.footer__dropdown-list-2
                 li.footer__list-item 
                     a(href="#!") Банковские карты
@@ -22,7 +23,7 @@
                 li.footer__list-item 
                     a(href="#!") Защитные признаки банкнот Банка России
     ul.footer__list
-        li.footer__list-item-dropdown Корпоративным клиентам
+        li.footer__list-item-dropdown.footer__list-item-dropdown-3 Корпоративным клиентам
             ul.footer__dropdown-list-3
                 li.footer__list-item 
                     a(href="#!") Как стать клиентом
@@ -31,7 +32,7 @@
                 li.footer__list-item 
                     a(href="#!") Интернет-банк
     ul.footer__list
-        li.footer__list-item-dropdown Услуги РЦБ
+        li.footer__list-item-dropdown.footer__list-item-dropdown-4 Услуги РЦБ
             ul.footer__dropdown-list-4
                 li.footer__list-item 
                     a(href="#!") Доступ на валютный рынок
