--- a/blocks/footer/footer.scss
+++ b/blocks/footer/footer.scss
@@ -47,18 +47,76 @@ ul.footer__list {
     ul.footer__list {
         width: 382px;
     }
-    ul.footer__list:nth-child(2), ul.footer__list:nth-child(4){
+
+    ul.footer__list:nth-child(2),
+    ul.footer__list:nth-child(4) {
         margin-left: 120px;
     }
-    ul.footer__list:nth-child(3), ul.footer__list:nth-child(4){
+
+    ul.footer__list:nth-child(3),
+    ul.footer__list:nth-child(4) {
         margin-top: 32px;
     }
 }
+
 @media screen and (max-width: 1023px) {
+    .footer {
+        padding-top: 59px;
+        padding-bottom: 49px;
+    }
     ul.footer__list {
         width: 276px;
     }
-    ul.footer__list:nth-child(2), ul.footer__list:nth-child(4){
+
+    ul.footer__list:nth-child(2),
+    ul.footer__list:nth-child(4) {
         margin-left: 31px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer {
+        padding-top: 35px;
+        padding-bottom: 59px;
+    }
+    ul.footer__list {
+        display: block;
+    }
+    ul.footer__list:nth-child(2),
+    ul.footer__list:nth-child(4) {
+        margin-left: 0;
+    }
+
+    ul.footer__list:nth-child(2),
+    ul.footer__list:nth-child(3),
+    ul.footer__list:nth-child(4) {
+        margin-top: 15px;
+    }
+
+    .footer__dropdown-list-1,
+    .footer__dropdown-list-2,
+    .footer__dropdown-list-3,
+    .footer__dropdown-list-4 {
+        display: none;
+    }
+    li.footer__list-item-dropdown{
+        font-size: 14px;
+    }
+    li.footer__list-item-dropdown span::after{
+        font-family: "iconsRR";
+        content: "\e924";
+        color: $gray-darken-5;
+        font-size: 7px;
+        position: absolute;
+        right: 18px;
+        transition: 0.5s
+    }
+    .footer__dropdown-list_show{
+        display: list-item;
+    }
+    .after_active::after{
+        transform: rotate(180deg);
+        color: $white !important;
+        transition: 0.5s
     }
 }
